welcome.lessons.welcome.traversal.Snake.scala.code
def positionFinale():Boolean = {
		if ((estFaceMur()) && (getDirection == Direction.EST)){
			gauche()
			if (estFaceMur()){
				droite()
				return true
			} else { gauche()
					avance() 
					gauche() 
					return false} 
		} 
}		
override def run() {
baisseBrosse()
	while (positionFinale() == false){
				avance() 
  	}
}
